# authentrics-client

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
doc/: AuthenticationHandler.rst  AuthentricsCallback.rst  BaseClient.rst  FileType.rst  MembershipHandler.rst  api.rst  conf.py  generate_multipart_json.rst  index.rst
doc/api/: base_client.rst  client.rst  handlers.rst  types.rst
doc/api/handlers/: admin_handler.rst  authentication_handler.rst  base_handler.rst  checkpoint_handler.rst  dynamic_handler.rst  membership_handler.rst  project_handler.rst  static_handler.rst  user_handler.rst
doc/api/handlers/dynamic_handler/: comparative_analysis.rst  contribution_analysis.rst  correlation_analysis.rst  sensitivity_analysis.rst
doc/api_reference/: AuthentricsClient.rst
doc/api_reference/base_classes/: index.rst
doc/api_reference/handlers/: AdminHandler.rst  CheckpointHandler.rst  DynamicHandler.rst  ProjectHandler.rst  StaticHandler.rst  UserHandler.rst  index.rst
doc/api_reference/transformers/: index.rst
doc/api_reference/types/: Comparison.rst  index.rst
examples/: basic_workflow.py
src/authentrics_client/: __init__.py
src/authentrics_client/cli/: __init__.py  cli.py  config.py
src/authentrics_client/client/: __init__.py  authentrics_client.py  base_client.py  types.py
src/authentrics_client/client/handlers/: __init__.py  admin_handler.py  authentication_handler.py  base_handler.py  base_model_handler.py  checkpoint_handler.py  dynamic_handler.py  membership_handler.py  project_handler.py  result_handler.py  static_handler.py  user_handler.py
src/authentrics_client/transformers/: __init__.py  callback.py
