[project]
name = "authentrics-client"
version = "1.0.0"
description = "Python client for Authentrics.ai backend libraries"
authors = [
    { name = "Michael Jacobs", email = "michael.jacobs@authentrics.ai" },
    { name = "Bimarsh Neupane", email = "bimarsh.neupane@authentrics.ai" },
    { name = "Sean Hagstrom", email = "sean.hagstrom@authentrics.ai" },
    { name = "Tony Cermak", email = "tony.cermak@authentrics.ai" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "build[dev] (>=1.2.2.post1,<2.0.0)",
    "wheel[dev] (>=0.45.1,<0.46.0)",
    "keyring[dev] (>=25.6.0,<26.0.0)",
    "twine[dev] (>=6.1.0,<7.0.0)",
    "pytest[dev] (>=8.4.1,<9.0.0)",
    "keyrings-google-artifactregistry-auth[dev] (>=1.1.2,<2.0.0)",
    "poetry[dev] (>=2.1.3,<3.0.0)",
    "click[cli,transformers] (<8.1)",
    "transformers[transformers] (>=4.54.1,<5.0.0)",
    "ruff[dev] (>=0.12.7,<0.13.0)",
]

[project.scripts]
authrx = "authentrics_client.cli.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
