[project]

name = "authentrics-client"
version = "2.0.1"
description = "Python client for Authentrics.ai backend libraries"
authors = [
    { name = "Michael Jacobs", email = "michael.jacobs@authentrics.ai" },
    { name = "Bimarsh Neupane", email = "bimarsh.neupane@authentrics.ai" },
    { name = "Sean Hagstrom", email = "sean.hagstrom@authentrics.ai" },
    { name = "Tony Cermak", email = "tony.cermak@authentrics.ai" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["requests (>=2.32.3,<3.0.0)", "pyjwt (>=2.10.1,<3.0.0)"]

[project.scripts]
authrx = "authentrics_client.cli.cli:cli"

[project.optional-dependencies]
transformers = [
    "click (<8.1)",
    "transformers (>=4.54.1,<5.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
keyring = "^25.6.0"
keyrings-google-artifactregistry-auth = "^1.1.2"
wheel = "^0.45.1"
twine = "^6.1.0"
poetry = "^2.1.3"
pytest = "^8.4.1"
ruff = "^0.12.7"

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "FA", # future annotations
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
